# SmartPI

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  build.md  handbook_chatbot.csv  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: bench_detector.py  perf_notes.md
configs/: app.yaml  calibration.yaml.example  logging.yaml
configs/profiles/: classroom.yaml  dark_room.yaml  daylight.yaml
docker/: Dockerfile.dev  compose.yaml
docs/: 00_best_practices.md  00_overview.md  01_bill_of_materials.md  02_build_guide.md  03_repair_forward_notes.md  04_system_architecture.md  05_calibration_ux.md  06_interaction_design.md  07_troubleshooting.md  08_safety_and_power.md  09_accessibility_and_inclusion.md  10_event_and_venue_requirements.md  11_problem_and_value.md  GAPS_AND_IMPLEMENTATION.md  api_overview.md  config_reference.md
docs/adr/: README.md
docs/demo_walkthrough/: operator_checklist.md  showcase_script.md
docs/diagrams/: README.md  architecture.mmd  calibration_flow.mmd
docs/images/: README.md
docs/technical/: 01_system_data_flow_and_services.md  02_capture_layer.md  03_vision_preprocess_and_detection.md  04_tracking_and_calibration.md  05_interaction_events_gestures_adapters.md  06_renderer_and_ui.md  07_cli_config_and_operations.md  README.md
hardware/: bom.csv
hardware/camera_mount/: README.md
hardware/enclosure/: README.md
hardware/ir_pen/: README.md  pen_bom.csv
hardware/projector_profiles/: generic_1080p.yaml  (+1 more)
scripts/: calibrate.sh  enable_kiosk.sh  export_diagnostics.sh  generate_chatbot_qa.py  healthcheck.sh  install_pi.sh  run_demo.sh  sync_chatbot_csv_to_index.py
tests/: __init__.py  conftest.py  test_bom.py  test_calibration.py  test_configs.py  test_detect_offline.py  test_events.py  test_tracking.py
(+42 files in other folders)
